# clanktank

./: .env.example  .example.env  .gitignore  .pre-commit-config.yaml  404.html  CLAUDE.md  PROGRESS.md  README.md  index.html  mkdocs.yml  package-lock.json  package.json  pyproject.toml  sitemap.xml
.github/workflows/: deploy-dashboard.yml  security-scan.yml
data/: hackathon-july19-backup.db  hackathon.db  test_github_analysis.json  test_hackathon_submissions.json
docs/: Block Tank Thread Notes.md  helium-llms-full.txt  index.md  phantom-llms-full.txt  pitch-pipeline.md  prize-pool-technical-overview.md  quadratic-voting.md  voting-context.md
docs/hackathon-edition/: PLAN.md  README.md  TODO_discord-roles.md  TODO_episode-generator.md  consolidate_todo.md  episode-format.md  frontend_todo.md  gitingest_todo.md  hackathon-countdown-implementation-plan.md  hackathon-creative-notes.md  hackathon-show-config.md  hackathon-technical-notes-wordpress.md  hackathon_TODO.md  image-upload-final-fix.md  implementation-review.md  issue-gitingest.md  o3-gitingest.md  optimization-2025-07-19.md  pipeline-updates.md  research-judging.md  research-schema-migration.md  roadmap.md  schema-consolidation.md  security-review.md  submission-pipeline-robustness.md
docs/notes/: Block Tank Pitch Submission Instructions.md  BlockTank-Concept-Prototype.md  Clank Tank Feedback.md  Clank Tank Ops.md  Clank Tank S1E1.md  Shmotime - Nonsense AI Show Generator.md  ai16z Infinite Show.md  pitch-pipeline-TODO.md  tasks-pitch.md  tasks.md
episodes/hackathon/: 10.json  11.json  13.json  14.json  15.json  2.json  3.json  6.json  620DAA.json  7.json  8.json  8F4348.json  SMOKE_TEST_001.json  TEST001.json  TEST002.json  test_episode.json
episodes/v2/: 1.json  12.json  16.json  4.json  5.json  9.json
hackathon/: CLEANUP_PLAN.md  README.md  __main__.py  create_hackathon_db.py  discord_bot.py  generate_episode.py  github_analyzer.py  hackathon_manager.py  hackathon_research.py  migrate_schema.py  process_submissions.py  requirements.txt  schema.py  submission_schema.json  upload_youtube.py
hackathon-edition/: index.html
hackathon-edition/github-issues/: index.html
hackathon-edition/hackathon-creative-notes/: index.html
hackathon-edition/hackathon-show-config/: index.html
hackathon-edition/hackathon-technical-notes-existing/: index.html
hackathon-edition/hackathon-technical-notes-wordpress/: index.html
hackathon-edition/milestones/: index.html
hackathon-edition/show-config/: index.html
hackathon-edition/summary-for-team/: index.html
hackathon/admin_tools/: README.md  recovery_tool.py
hackathon/backend/: README.md  app.py  config.py  create_db.py  github_analyzer.py  hackathon_manager.py  http_client.py  migrate_schema.py  models.py  research.py  schema.py  simple_audit.py  submission_schema.json  sync_schema_to_frontend.py  websocket_service.py
hackathon/bots/: discord_bot.py
hackathon/dashboard/: .env.example  README.md  app.py  requirements.txt
hackathon/episodes/: 5747B7.json  SMOKE_TEST_001.json  TEST001.json  TEST002.json  test-project-e2e-1750960380.json  test-rhf-integration-1750907032.json
hackathon/frontend/: .eslintrc.cjs  README.md  package-lock.json  package.json  vite.config.ts
hackathon/prompts/: episode_dialogue.py  judge_personas.py  research_prompts.py  show_config.py  unified_prompts.py
hackathon/scripts/: README.md  add_required_constraints.py  cache_discord_avatars.py  cdn_upload.py  collect_votes.py  create_db.py  generate_episode.py  generate_episode2.py  generate_static_data.py  migrate_schema.py  populate_prize_pool.py  process_submissions.py  record_episodes.sh  recorder.js  recovery_tool.py  upload_youtube.py
hackathon/test/: test_full_pipeline.py  test_hackathon_system.py
hackathon/tests/: NOTES.md  README.md  conftest.py  generate_test_leaderboard_data.py  test_api_endpoints.py  test_assertions.py  test_cli.sh  test_complete_submission.py  test_constants.py  test_db_helpers.py  test_discord_bot.py  test_frontend_data_generator.py  test_frontend_database_seeder.py  test_frontend_submission.py  test_frontend_visual_data.py  test_full_pipeline.py  test_hackathon_system.py  test_image_factory.py  test_image_upload.py  test_robust_pipeline.py  test_security_validation.py  (+3 more)
leaderboard-plans/: PROGRESS.md  frontend-tasks.md
pitch-pipeline/: index.html
scripts/: README.md  batch_create_youtube_meta.js  cache_discord_avatars.py  cli.py  create_test_db.py  hackathon_research.py  judge_scoring.py  pitch_manager_scoring_patch.py  prepare_youtube_metadata.py  record-upload.md  recorder.js  shmotime-recorder.js  test_hackathon_processor.py  upload_to_youtube.py
search/: search_index.json
templates/: hackathon_submission.md
trashcan/: generate_episode_enhanced.py
(+353 files in other folders)
