[project]
name = "clanktank"
version = "0.1.0"
requires-python = ">=3.11"

[project.scripts]
clanktank = "hackathon.__main__:main"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = [
  "F",     # pyflakes (unused imports, variables, etc.)
  "E",     # pycodestyle errors
  "W",     # pycodestyle warnings
  "I",     # isort (import sorting)
  "UP",    # pyupgrade (modern Python syntax)
  "B",     # flake8-bugbear (common bugs)
  "SIM",   # flake8-simplify
  "RUF",   # ruff-specific rules
]
ignore = [
  "E501",   # line length (handled by formatter)
  "B904",   # `raise` without `from` in except (too pervasive to fix in one pass)
  "B905",   # `zip()` without strict= (too noisy for existing code)
  "B008",   # function call in default arg (standard FastAPI pattern: File(), Depends())
  "UP045",  # Optional[X] → X | None (breaks dynamic create_model() contexts)
  "RUF001", # ambiguous unicode chars (intentional en-dashes in user-facing strings)
  "RUF006", # dangling asyncio.create_task (existing pattern, needs careful refactor)
  "SIM105", # contextlib.suppress (stylistic, not a bug)
  "UP017",  # datetime.timezone.utc → datetime.UTC (keep compat with Python 3.10 test envs)
]

[tool.ruff.lint.per-file-ignores]
"hackathon/tests/*" = ["F811"]  # redefined-unused (pytest fixtures)
